Bug #35943 Failure to create mysql.ndb_schema shoudl not be logged if tabe already exist
Submitted: 9 Apr 2008 18:18 Modified: 20 May 2008 10:57
Reporter: Magnus Blaudd
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Magnus Blaudd Target Version:
Triage: D3 (Medium)

[9 Apr 2008 18:18] Magnus Blaudd
Description:
When a MySQL Server connects the cluster it will make sure that the mysql.ndb_schema table
exists. If two MySQL Servers are started simultaneously they will both check but only one
of them will succeed in creating the table. The other one will currently log en error
message about this. This is not necessary, it should just continue and check again if the
table exist.

How to repeat:
Start two MySQL Server that connect to the same cluster. Check the error log.

Suggested fix:
Add the error code 721 (TableAlreadyExist) to the list of errors to ignore and try again.
[9 Apr 2008 18:38] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/45149

ChangeSet@1.2569, 2008-04-09 18:42:05+02:00, msvensson@pilot.mysql.com +1 -0
  Bug#35943 Failure to create mysql.ndb_schema shoudl not be logged if tabe already exist
[25 Apr 2008 10:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/45994

ChangeSet@1.2577, 2008-04-25 10:56:34+02:00, msvensson@pilot.mysql.com +1 -0
  Bug#35943 Failure to create mysql.ndb_schema should not be logged if tabe already exist
[28 Apr 2008 12:56] Bugs System
Pushed into 5.1.23-ndb-6.4.0
[28 Apr 2008 12:57] Bugs System
Pushed into 5.1.24-ndb-6.3.13
[28 Apr 2008 12:58] Bugs System
Pushed into 5.1.24-ndb-6.2.14
[20 May 2008 10:57] Jon Stephens
Documented in the 5.1.24-ndb-6.2.16 and 5.1.24-ndb-6.3.14 changelogs as follows:

        When more than one SQL node connected to the cluster at the same time,
        creation of the mysql.ndb_schema table failed on one of them with an 
        explicit /Table exists/ error, which was not necessary.
[13 Dec 2008 0:30] Bugs System
Pushed into 6.0.6-alpha  (revid:sp1r-msvensson@pilot.mysql.com-20080425085634-48316)
(version source revid:jonas@mysql.com-20080808094047-4e1yiarqa2t3opg3) (pib:5)
[30 Jan 14:32] Bugs System
Pushed into 6.0.10-alpha (revid:luis.soares@sun.com-20090129165607-wiskabxm948yx463)
(version source revid:luis.soares@sun.com-20090129163120-e2ntks4wgpqde6zt) (merge vers:
6.0.10-alpha) (pib:6)
[30 Jan 16:11] Bugs System
Pushed into 5.1.32 (revid:luis.soares@sun.com-20090129165946-d6jnnfqfokuzr09y) (version
source revid:sp1r-msvensson@pilot.mysql.com-20080409164205-42881) (merge vers: 5.1.25-rc)
(pib:6)
[17 Feb 16:01] Bugs System
Pushed into 5.1.32-ndb-6.3.23 (revid:tomas.ulin@sun.com-20090217131017-6u8qz1edkjfiobef)
(version source revid:tomas.ulin@sun.com-20090203133556-9rclp06ol19bmzs4) (merge vers:
5.1.32-ndb-6.3.22) (pib:6)
[17 Feb 17:49] Bugs System
Pushed into 5.1.32-ndb-6.4.3 (revid:tomas.ulin@sun.com-20090217134419-5ha6xg4dpedrbmau)
(version source revid:tomas.ulin@sun.com-20090203133556-9rclp06ol19bmzs4) (merge vers:
5.1.32-ndb-6.3.22) (pib:6)
[17 Feb 19:25] Bugs System
Pushed into 5.1.32-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090217134216-5699eq74ws4oxa0j)
(version source revid:tomas.ulin@sun.com-20090201210519-vehobc4sy3g9s38e) (merge vers:
5.1.32-ndb-6.2.17) (pib:6)