Bug#35943 Failure to create mysql.ndb_schema shoudl not be logged if tabe already exist

sql/ha_ndbcluster_binlog.cc:
  Add Ndb error code 721 to list of errors that should not be printed
  to error log